--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no"><meta name="theme-color" content="#000000"><link rel="manifest" href="/react-pwa/manifest.json"><link rel="shortcut icon" href="/react-pwa/favicon.ico"><title>React App</title></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div><script type="text/javascript" src="/react-pwa/static/js/main.156e2c87.js"></script></body></html>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <title>PWA Prototype</title>
+    <meta charset="utf-8">
+    <meta content="author" description="Hendrik Kuck">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="theme-color" content="#000000" /><link rel="manifest" href="/react-pwa/manifest.ee136d95accd848a118c14c7148023ce.json" /></head>
+  <body>
+    <noscript>
+      You need to enable JavaScript to run this app.
+    </noscript>
+    <div id="root"></div>
+  <script type="text/javascript" src="/react-pwa/js/vendor.js"></script><script type="text/javascript" src="/react-pwa/js/app.js"></script></body>
+</html>
