--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>PWA Prototype</title>
+    <title>react PWA</title>
     <meta charset="utf-8">
-    <meta content="author" description="Hendrik Kuck">
+    <meta content="author" description="uniquename">
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
