server side css with material ui and jss

--- a/public/index.html
+++ b/public/index.html
@@ -12,5 +12,6 @@
     </noscript>
     <div id="root"></div>
     <style id="jss-server-side"></style>
+    <style id="css-server-side"></style>
   </body>
 </html>
